[gd_scene load_steps=6 format=3 uid="uid://cycdqhy5xadoa"]

[ext_resource type="Script" path="res://src/ui/menus/main/main_menu.gd" id="1_1aer0"]
[ext_resource type="FontFile" uid="uid://4r5r4qviqq2k" path="res://assets/ui/fonts/Improbable.otf" id="1_svkb1"]
[ext_resource type="PackedScene" uid="uid://c6s7o88tyavpj" path="res://src/ui/ship_building/ShipBuildingView.tscn" id="2_2q72j"]
[ext_resource type="Texture2D" uid="uid://ctgsf4d6gg6gj" path="res://assets/ui/menus/main/concept_bg_1.png" id="2_sgqft"]
[ext_resource type="PackedScene" uid="uid://cymcngb74n5dp" path="res://src/ui/menus/main/SettingMenu.tscn" id="5_befr1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1aer0")
scene_after_start = ExtResource("2_2q72j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1164.0
offset_bottom = 653.0
mouse_filter = 2
texture = ExtResource("2_sgqft")

[node name="MainScreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
layout_mode = 2

[node name="TitleContainer" type="MarginContainer" parent="MainScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_svkb1")
theme_override_font_sizes/font_size = 128
text = "Exodus"

[node name="ButtonsContainer" type="MarginContainer" parent="MainScreen/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="PlayContainer" type="MarginContainer" parent="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer/PlayContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_svkb1")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="SettingsContainer" type="MarginContainer" parent="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_svkb1")
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="QuitContainer" type="MarginContainer" parent="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer/QuitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_svkb1")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="Tag" type="MarginContainer" parent="MainScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 785
theme_override_constants/margin_top = 120

[node name="Label" type="Label" parent="MainScreen/VBoxContainer/Tag"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_svkb1")
theme_override_font_sizes/font_size = 28
text = "Ludum Dare 54"

[node name="SettingMenu" parent="." instance=ExtResource("5_befr1")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer/PlayContainer/Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer/SettingsContainer/Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/ButtonsContainer/VBoxContainer/QuitContainer/Button" to="." method="_on_quit_button_pressed"]
